<resources>
    <string name="app_name">Med Life</string>


    <string name="txt_icon_title">Image</string>
    <string name="txt_medication_name">Name</string>
    <string name="txt_medication_frequency">Frequency</string>
    <string name="txt_medication_dosage">Dosage</string>
    <string name="txt_max_taking_days">Max taking days</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_ok_cps_on">OK</string>
    <string name="txt_cancel_cps_on">CANCEL</string>
    <string name="add_medication">Add medication</string>
    <string name="edit_medication">Edit medication</string>
    <string name="txt_delete">Delete</string>
    <string name="plus_button_text">+</string>
    <string name="txt_start_date">Date</string>
    <string name="txt_time">Time</string>
    <string name="txt_hint_date_from">Date from</string>
    <string name="txt_hint_time_from">Time from</string>
    <string name="txt_time_to">Time to</string>
    <string name="txt_date_to">Date to</string>
    <string name="txt_select_date">SELECT DATE</string>
    <string name="txt_select_time">SELECT TIME</string>
    <string name="txt_hint_time">Time</string>
    <string name="calendar">Calendar</string>
    <string name="medications">Medications</string>
    <string name="add_medication_reminder">Add medication reminder</string>
    <string name="reminders_for">Reminders for %1$s</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_dosage">Please enter dosage</string>
    <string name="please_enter_frequency">Please enter frequency</string>
    <string name="please_enter_max_taking_days">Please enter maximum taking days</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="all_medications">All medications</string>
    <string name="type_to_search">Type to search</string>
    <string name="no_data_found">No data found</string>
    <string name="date_from">Date from</string>
    <string name="date_to">Date to</string>
    <string name="period">Period</string>
    <string name="reminder_times">Reminder times</string>
    <string name="edit_reminder">Edit reminder</string>
    <string name="add_reminder">Add reminder</string>
    <string name="please_choose_date">Please choose date</string>
    <string name="please_add_at_least_one_reminder_time">Please add at least one reminder time</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_you_want_to_delete_this_medication">Are you sure you want to delete this medication?</string>
    <string name="are_you_sure_you_want_to_delete_this_reminder">Are you sure you want to delete this reminder?</string>
    <string name="are_you_sure_you_want_to_delete_this_reminder_time">Are you sure you want to delete this reminder time?</string>
    <string name="select_time">Select Time</string>
    <string name="add_new_time">Add new time</string>
    <string name="you_need_to_take_the_following_medications_colons">You need to take the following medications:</string>
    <string name="alarm_permission_text">Please allow the app to set alarms in order for it to work properly.</string>
    <string name="reminders">Reminders</string>
    <string name="medications_for">Medications for</string>
</resources>