<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="20dp">

        <ImageView
            android:id="@+id/medication_recycler_xml_icon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/txt_icon_title"
            android:text="@string/txt_icon_title"/>

        <TextView
            android:id="@+id/medication_recycler_xml_name"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/txt_medication_name" />

        <TextView
            android:id="@+id/medication_recycler_xml_dosage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/txt_medication_dosage" />

        <TextView
            android:id="@+id/medication_recycler_xml_frequency"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/txt_medication_frequency"/>

        <TextView
            android:id="@+id/medication_recycler_xml_max_taking_days"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/txt_max_taking_days"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>