<RelativeLayout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    xmlns:app               ="http://schemas.android.com/apk/res-auto"
    android:id              ="@+id/container"
    android:layout_width    ="match_parent"
    android:layout_height   ="wrap_content">

    <androidx.cardview.widget.CardView
        android:id                              ="@+id/card"
        android:layout_width                    ="match_parent"
        android:layout_height                   ="wrap_content"
        android:layout_margin                   ="8dp"
        app:layout_constraintStart_toStartOf    ="parent"
        app:layout_constraintEnd_toEndOf        ="parent"
        app:layout_constraintTop_toTopOf        ="parent"
        app:layout_constraintDimensionRatio     ="1:1"
        app:cardElevation                       ="4dp"
        app:cardCornerRadius                    ="8dp">

        <LinearLayout
            android:layout_width=   "match_parent"
            android:layout_height   ="wrap_content"
            android:gravity         ="center_vertical"
            android:orientation     ="vertical"
            android:padding         ="16dp"
            android:background      ="?android:selectableItemBackground">

            <ImageView
                android:id              ="@+id/medication_icon"
                android:layout_width    ="96dp"
                android:layout_height   ="96dp"
                android:layout_gravity  ="center"/>

            <LinearLayout
                android:layout_width        ="match_parent"
                android:layout_height       ="wrap_content"
                android:orientation         ="horizontal"
                android:layout_marginTop    ="16dp">

                <TextView
                    android:layout_width        ="0dp"
                    android:layout_height       ="wrap_content"
                    android:layout_weight       ="1"
                    android:textColor           ="@color/grey"
                    android:text                ="@string/txt_medication_name"
                    android:textSize            ="16sp" />

                <TextView
                    android:id                  ="@+id/name_text"
                    android:layout_width        ="0dp"
                    android:layout_height       ="wrap_content"
                    android:layout_marginStart  ="8dp"
                    android:layout_weight       ="1"
                    android:fontFamily          ="sans-serif-medium"
                    android:textColor           ="@color/black"
                    android:textSize            ="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width        ="match_parent"
                android:layout_height       ="wrap_content"
                android:orientation         ="horizontal"
                android:layout_marginTop    ="8dp">

                <TextView
                    android:layout_width        ="0dp"
                    android:layout_height       ="wrap_content"
                    android:layout_weight       ="1"
                    android:textColor           ="@color/grey"
                    android:text                ="@string/txt_medication_dosage"
                    android:textSize            ="16sp" />

                <TextView
                    android:id                  ="@+id/dosage_text"
                    android:layout_width        ="0dp"
                    android:layout_height       ="wrap_content"
                    android:layout_marginStart  ="8dp"
                    android:layout_weight       ="1"
                    android:fontFamily          ="sans-serif-medium"
                    android:textColor           ="@color/black"
                    android:textSize            ="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width        ="match_parent"
                android:layout_height       ="wrap_content"
                android:orientation         ="horizontal"
                android:layout_marginTop    ="8dp">

                <TextView
                    android:layout_width        ="0dp"
                    android:layout_height       ="wrap_content"
                    android:layout_weight       ="1"
                    android:textColor           ="@color/grey"
                    android:text                ="@string/txt_medication_frequency"
                    android:textSize            ="16sp" />

                <TextView
                    android:id                  ="@+id/frequency_text"
                    android:layout_width        ="0dp"
                    android:layout_height       ="wrap_content"
                    android:layout_marginStart  ="8dp"
                    android:layout_weight       ="1"
                    android:fontFamily          ="sans-serif-medium"
                    android:textColor           ="@color/black"
                    android:textSize            ="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width        ="match_parent"
                android:layout_height       ="wrap_content"
                android:orientation         ="horizontal"
                android:layout_marginTop    ="8dp">

                <TextView
                    android:layout_width        ="0dp"
                    android:layout_height       ="wrap_content"
                    android:layout_weight       ="1"
                    android:textColor           ="@color/grey"
                    android:text                ="@string/txt_max_taking_days"
                    android:textSize            ="16sp" />

                <TextView
                    android:id                  ="@+id/max_taking_days_text"
                    android:layout_width        ="0dp"
                    android:layout_height       ="wrap_content"
                    android:layout_marginStart  ="8dp"
                    android:layout_weight       ="1"
                    android:fontFamily          ="sans-serif-medium"
                    android:textColor           ="@color/black"
                    android:textSize            ="16sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>